--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,10 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
+//tasks.withType(JavaCompile) {
+//    options.encoding = "UTF-8"
+//}
